feat: add form html

--- a/mail/index.html
+++ b/mail/index.html
@@ -11,9 +11,17 @@
     <!-- main -->
     <main>
 
+        <section>
+            <h1>verifica se sei in lista</h1>
+            <form action="#">
+                <input type="mail" name="mail" id="mail" placeholder="inserisci la tua mail">
+                <div class="btn">cerca</div>
+            </form>
+        </section>
+        
     </main>
 
-    
+
     <script src="js/main.js"></script>
 </body>
 </html>
