--- a/mail/index.html
+++ b/mail/index.html
@@ -15,7 +15,10 @@
             <h1>verifica se sei in lista</h1>
             <form action="#">
                 <input type="mail" name="mail" id="mail" placeholder="inserisci la tua mail">
-                <div class="btn">cerca</div>
+                <div class="flex"><div class="btn">cerca</div>
+                <div id="reset" class="btn">reset</div></div>
+                
+
             </form>
 
             <h2 class="si">complimenti sei in lista</h2>
