--- a/dadi/index.html
+++ b/dadi/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+    <!-- main -->
+     <main>
+        <h2>Sei pronto alla sfida?</h2>
+        <div id="btn">tira i dadi</div>
+        <div class="risultato"></div>
+        <div class="hum"></div>
+        <div class="bot"></div>
+        
+     </main>
     
 
     <script src="js/main.js"></script>
